--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,17 +4,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #7c3dca;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <AnchorPane layoutY="89.0" prefHeight="311.0" prefWidth="600.0" style="-fx-background-color: #a6a5c9;">
+      <AnchorPane layoutY="89.0" prefHeight="311.0" prefWidth="600.0" style="-fx-background-color: #22264c;">
          <children>
-            <Button fx:id="loginButton" layoutX="184.0" layoutY="207.0" mnemonicParsing="false" onAction="#newWindow" prefHeight="58.0" prefWidth="232.0" text="Login" />
+            <Button fx:id="loginButton" layoutX="184.0" layoutY="207.0" mnemonicParsing="false" onAction="#newWindow" prefHeight="58.0" prefWidth="232.0" style="-fx-background-color: #793cd5;" text="Login" textFill="WHITE">
+               <font>
+                  <Font name="Segoe UI" size="23.0" />
+               </font></Button>
             <TextField fx:id="loginText" layoutX="184.0" layoutY="131.0" prefHeight="25.0" prefWidth="232.0" />
          </children>
       </AnchorPane>
-      <Label layoutX="167.0" layoutY="14.0" prefHeight="76.0" prefWidth="266.0" text="Welcome to chat">
+      <Label layoutX="187.0" layoutY="14.0" prefHeight="76.0" prefWidth="266.0" text="Welcome to chat" textFill="WHITE">
          <font>
-            <Font name="Comic Sans MS Bold Italic" size="29.0" />
+            <Font name="Segoe UI Bold Italic" size="29.0" />
          </font>
       </Label>
    </children>
